# sf_trans_pre_project

./: # Role: 首席 AI 科学家 & 物流供应链数字化转型专家 & 独立技术调.md  # 预测 Skills 工具箱 — 深度产品需求文档（PRD）v3.0.md  .gitignore  00-背景-业务专项汇报材料报告  01-计算方法  01_c-数据映射规则文档.md  02-原始数据  02-需求整理深度产品需求文档.md  03-方案设计技术选型  Dockerfile  Makefile  README.md  chapter4_draft.md  chapter4_revised.md  chapter6_draft.md  docker-compose.yml  pyproject.toml  requirements.txt  中转场地在线预测智能体平台 —— 技术选型开发指南.md  中转场地在线预测智能体集群技术开发需求方案.md  中转场地在线预测智能体集群技术白皮书.md  研究报告_多智能体集群物流边缘预测架构.md
docs/: 01-阶段性需求开发计划.md  02-项目运营指南.md  03-技术开发方案文档.md
src/: config.py  main.py
src/api/: middleware.py  routes.py
src/audit/: ledger.py  tracer.py
src/community/: method_card.py
src/evidence/: blackboard.py  loader.py  quality.py
src/factory/: leader.py  sandbox.py
src/fusion/: bayesian.py  conformal.py  thompson.py
src/hitl/: gateway.py  room.py
src/orchestration/: graph.py  pipeline.py  state.py
src/orchestration/nodes/: build_evidence.py  calibrate.py  debate.py  event_encode.py  fuse.py  hitl_gate.py  parse_intent.py  publish.py  quality_gate.py  run_skills.py  score_difficulty.py  select_team.py
src/platform/: gateway.py  tenant.py
src/skills/: base.py  market.py  registry.py  schema.py
tests/: test_fusion.py  test_integration.py  test_orchestration.py  test_skills.py
volume-forecast-llm/: README.md  SKILL.md  __init__.py  agriculture.py  config.py  data_prep.py  forecast_assembly.py  llm_reasoning.py  pipeline.py  promotion_lift.py  promotion_search.py  prophet_baseline.py  requirements.txt  utils.py
(+6 files in other folders)
