[project]
name = "transit-site-prediction-agent-platform"
version = "0.1.0"
description = "中转场地在线预测智能体平台 — Multi-tenant SaaS prediction agent platform for logistics transit sites"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Prediction Platform Team"}
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29.0",
    "redis>=5.0",
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "prophet>=1.1",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "structlog>=24.0",
    "tenacity>=8.0",
    "cachetools>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
